--- a/About aliens.html
+++ b/About aliens.html
@@ -3,7 +3,7 @@
 <title>About aliens</title>
 <style>
 body{
-background-image:url("space.JPG");
+background-image:url("space.jpg");
 }
 p{
 font size:50px;
@@ -60,9 +60,9 @@ li a:hover {
 <li><a href="stars.html">Stars </a> </li>
 </ul>
 <h1>Aliens #Nobody knows if this is true</h1>
-<img src="ALIENS.JPG"> </img>
+<img src="ALIENS.jpg"> </img>
 <p>Extraterrestrial life is hypothetical life which may occur outside of Earth and which did not originate on Earth. Such life might range from simple prokaryotes to beings with civilizations far more advanced than humanity. The Drake equation speculates about the existence of intelligent life elsewhere in the universe.It is belived
-that there may be a facility called area 51 where aliens are kept for research<br><marquee behavior="alternate"> <img src="aliens omg.JPG"alt="aliens"/>
+that there may be a facility called area 51 where aliens are kept for research<br><marquee behavior="alternate"> <img src="aliens omg.jpg"alt="aliens"/>
 </marquee></p>
 </body>
 </html>
