--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ li a {
   padding: 16px;
   text-decoration: none;
 }
-
+ 
 li a:hover {
   background-color: #111111;
 }
@@ -60,7 +60,7 @@ li a:hover {
 <li><a href="About aliens.html">Aliens </a> </li>
 </ul>
 <h1> The Milky Way Galaxy</h1>
-<img src="milkyway.JPEG" alt="milkyway"/>
+<img src="milkyway.jpeg" alt="milkyway"/>
 <p>Our Sun (a star) and all the planets around it are part of a galaxy known as the Milky Way Galaxy. A galaxy is a large group of stars, gas, and dust bound together by gravity. They come in a variety of shapes and sizes. The Milky Way is a large barred spiral galaxy. All the stars we see in the night sky are in our own Milky Way Galaxy. Our galaxy is called the Milky Way because it appears as a milky band of light in the sky when you see it in a really dark area.</p>
 
 <p> More about galaxies</p>
